k8s/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iodv3-ingress
  namespace: iodv3-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: qa.iodv3.local
    http:
      paths:
      - path: /accounts(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: accounts-service
            port:
              number: 8001
      - path: /blog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-service
            port:
              number: 8002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
  - http:
      paths:
      - path: /accounts(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: accounts-service
            port:
              number: 8001
      - path: /blog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-service
            port:
              number: 8002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
